--- a/app.css
+++ b/app.css
@@ -1307,13 +1307,13 @@ div#popup-post a {
 }
 
 .modal-profile_content-profile .upload-image {
-  margin-left: calc(12.5% - 1.25rem);
+  /* margin-left: calc(12.5% - 1.25rem);
   position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 2.5rem;
-  height: 2.5rem;
+  height: 2.5rem; */
 }
 
 .modal-profile_content-profile input:hover {
@@ -1321,17 +1321,20 @@ div#popup-post a {
 }
 
 .modal-profile_content-profile input[type='file'] {
-    text-indent: -999em;
+    /* text-indent: -999em;
     outline: none;
     height: 2.5rem;
     width: 2.5rem;
-    position: absolute;
+    position: absolute; */
+    margin-left: 1rem;
+    padding-top: 2rem;
 }
 
 .modal-profile_content-profile svg {
   fill: rgba(255, 255, 255, 0.8);
   height: 1.5rem;
- 
+  position: absolute;
+  margin-left: 8.5%; 
 }
 
 .modal-profile_content .cover-img {
