--- a/public/css/app.css
+++ b/public/css/app.css
@@ -104,8 +104,12 @@ div#left>.account-action {
 }
 
 div#left>.account-action img {
-  width: 80%;
   margin-top: 5px;
+  margin-right: 10px;
+  width: 3rem;
+  height: 3rem;
+  object-fit: cover;
+  border-radius: 100%;
 }
 
 div#left .account-action:hover {
@@ -201,7 +205,10 @@ section#middle_status-section {
 }
 
 section#middle_status-section div:first-of-type img {
-  width: 80%;
+  width: 3rem;
+  height: 3rem;
+  object-fit: cover;
+  border-radius: 100%;
 }
 
 /********** ARTICLE POST **********/
@@ -228,8 +235,10 @@ section#middle_status-section div:first-of-type img {
 }
 
 .post-article div:nth-of-type(1) img {
-  padding: 0 0.5rem;
-  width: 90%;
+  width: 3.25rem;
+  height: 3.25rem;
+  object-fit: cover;
+  border-radius: 100%;
 }
 
 .post-article div:nth-of-type(2) {
@@ -461,7 +470,10 @@ div#right::-webkit-scrollbar {
 }
 
 #right_follow-section article img {
-  width: 85%;
+  width: 3rem;
+  height: 3rem;
+  object-fit: cover;
+  border-radius: 100%;
 }
 
 #right_follow-section div:last-child {
@@ -530,7 +542,9 @@ div#right::-webkit-scrollbar {
 }
 
 #middle_profile-section .profile-img {
-  width: 25%;
+  width: 10vw;
+  object-fit: cover;
+  height: 10vw;
   border-radius: 50%;
   border: 3px solid white;
 }
@@ -1292,8 +1306,14 @@ div#popup-post a {
   align-items: center;
 }
 
+.modal-profile_content .upload-image {
+  width: 60%;
+}
+
 .modal-profile_content .profile-img {
-  width: 20%;
+  width: 10vw;
+  object-fit: cover;
+  height: 10vw;
   border-radius: 50%;
   padding: 3px;
   background-color: white;
@@ -1301,19 +1321,10 @@ div#popup-post a {
 
 .modal-profile_content .profile-img img{
   width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 50%;
   filter: brightness(80%);
-}
-
-.modal-profile_content-profile .upload-image {
-  /* margin-left: calc(12.5% - 1.25rem);
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 2.5rem;
-  height: 2.5rem; */
 }
 
 .modal-profile_content-profile input:hover {
@@ -1321,11 +1332,6 @@ div#popup-post a {
 }
 
 .modal-profile_content-profile input[type='file'] {
-    /* text-indent: -999em;
-    outline: none;
-    height: 2.5rem;
-    width: 2.5rem;
-    position: absolute; */
     margin-left: 1rem;
     padding-top: 2rem;
 }
@@ -1334,7 +1340,7 @@ div#popup-post a {
   fill: rgba(255, 255, 255, 0.8);
   height: 1.5rem;
   position: absolute;
-  margin-left: 8.5%; 
+  margin-left: calc(5vw - 0.75rem);
 }
 
 .modal-profile_content .cover-img {
@@ -1371,6 +1377,10 @@ div#popup-post a {
 
 .view_messages div {
   padding: 0.5rem;
+}
+
+#middle-messages {
+  display: none;
 }
 
 .middle_messages-header {
@@ -1446,6 +1456,7 @@ div#popup-post a {
   width: 50px;
   height: 50px;
   border-radius: 50%; 
+  object-fit: cover;
 }
 
 .article_message div:nth-of-type(2) p {
@@ -1486,7 +1497,8 @@ div#popup-post a {
 }
 
 .middle_write-header img {
-  /* object-fit: cover; */
+  object-fit: cover;
+  height: 2.5rem;
   width: 2.5rem;
   border-radius: 50%;
 }
@@ -1510,8 +1522,10 @@ div#popup-post a {
 }
 
 .middle_text-from img {
-  width: 2.5rem;
+  width: 3rem;
+  height: 3rem;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .middle_text-from div {
